# x

./: .gitattributes  .gitignore  README.md  readme  todo
archive/nix/snix/contrib/fetchroots/: Cargo.nix  Cargo.toml  default.nix
archive/nix/snix/contrib/snixbolt/: Cargo.nix  Cargo.toml  default.nix
archive/nix/snix/snix/castore/: Cargo.toml  build.rs  default.nix
archive/nix/snix/snix/castore-http/: Cargo.toml  default.nix
archive/nix/snix/snix/cli/: Cargo.toml  default.nix
archive/nix/snix/snix/nar-bridge/: Cargo.toml  default.nix
archive/nix/snix/snix/nix-compat/: Cargo.toml  default.nix
archive/nix/snix/snix/nix-daemon/: Cargo.toml  default.nix
archive/roast/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml  justfile  raw.service  recomprizz.service  roast.service  roast_scm.service
archive/roast/.github/workflows/: close-prs.yml
archive/roast/.woodpecker/: build.yml  release.yml  style.yml  tests.yml
archive/roast/libroast/: Cargo.toml  README.md
archive/roast/libroast/src/: common.rs  compress.rs  consts.rs  decompress.rs  lib.rs  utils.rs
archive/roast/libroast/src/operations/: cli.rs  mod.rs  raw.rs  recomprizz.rs
archive/roast/libroast/tests/: obs-service-cargo.spec  obs_scm.rs  repro.rs  scm.rs  shame.rs  test_utils.rs
archive/roast/roast-cli/: Cargo.toml  README.md
archive/roast/roast-cli/src/: cli.rs  lib.rs  raw.rs  recomprizz.rs  roast.rs  roast_scm.rs
archive/scheme/hoot/: .dir-locals.el  .gitignore  Makefile.am  README.md  configure.ac  guile  guix.scm  pre-inst-env.in
archive/scheme/hoot/.forgejo/workflows/: ci.yml
archive/scheme/hoot/doc/: hoot.texi
archive/scheme/hoot/examples/project-template/: Makefile  README.md  hello.js  hello.scm  index.html  manifest.scm  reflect.js  wtf8.wasm
archive/scheme/hoot/examples/repl/: Makefile  README.md  boot-repl.js  boot-repl.scm  reflect.wasm  repl.scm
archive/scheme/hoot/js-runner/: await-call.js  call.js  load-async.js  load-primitive.js  load.js
archive/scheme/hoot/lib/: Makefile.am  fibers.scm  guile.scm
archive/scheme/hoot/lib/fibers/: channels.scm  conditions.scm  operations.scm  promises.scm  scheduler.scm  streams.scm  timers.scm  waiter-queue.scm
archive/scheme/hoot/lib/hoot/: apply.scm  assoc.scm  atomics.scm  bitvectors.scm  bitwise.scm  boxes.scm  bytevectors.scm  char.scm  cond-expand.scm  control.scm  core-syntax-helpers.scm  core-syntax.scm  cross-compilation.scm  debug.scm  dynamic-states.scm  dynamic-wind.scm  environments.scm  eq.scm  equal.scm  error-handling.scm  errors.scm  eval.scm  exceptions.scm  expander.scm  external.scm  ffi.scm  finalization.scm  fluids.scm  gensym.scm  hackable.scm  hashtables.scm  inline-wasm.scm  interaction-environment.scm  keywords.scm  lists.scm  match.scm  modules.scm  not.scm  numbers.scm  pairs.scm  (+20 more)
archive/scheme/hoot/lib/ice-9/: atomic.scm  binary-ports.scm  control.scm  custom-ports.scm  exceptions.scm  i18n.scm  match.scm  optargs.scm  rdelim.scm  regex.scm  weak-vector.scm
archive/scheme/hoot/lib/rnrs/: bytevectors.scm
archive/scheme/hoot/lib/scheme/: base.scm  case-lambda.scm  char.scm  complex.scm  cxr.scm  eval.scm  file.scm  inexact.scm  lazy.scm  load.scm  process-context.scm  r5rs.scm  read.scm  repl.scm  time.scm  write.scm
archive/scheme/hoot/lib/srfi/: srfi-11.scm  srfi-14.scm  srfi-9.scm
archive/scheme/hoot/module/: Makefile.am
archive/scheme/hoot/reflect-js/: reflect.js
archive/scheme/hoot/reflect-wasm/: reflect.wat
archive/scheme/hoot/test/: basic-types.wasm  hashtable-utils.scm  test-atomics.scm  test-bitwise.scm  test-bytevectors.scm  test-char-prelude.scm  test-complex.scm  test-constants.scm  test-division.scm  test-environments.scm  test-eval.scm  test-exceptions.scm  test-expander.scm  test-ffi.scm  test-fibers-channels.scm  test-fibers-conditions.scm  test-fibers-operations.scm  test-fibers-scheduler.scm  test-fibers-streams.scm  test-fibers-timers.scm  test-fibers-waiter-queue.scm  test-fibers.scm  test-finalization.scm  test-flonums.scm  test-fluids.scm  test-fractions.scm  test-hash.scm  test-hashtables-doubly-weak.scm  test-hashtables-guile.scm  test-hashtables-weak-key.scm  test-hashtables-weak-value.scm  test-hashtables.scm  test-inline-wasm.scm  test-ints.scm  test-keywords.scm  test-library-group.scm  test-lower-stringrefs.scm  test-lower.scm  test-match.scm  test-modules.scm  (+21 more)
graphics/: .clang-format  meson.build  meson_options.txt
graphics/01_dda_line_drawing/src/: main.cpp
graphics/02_bresenham_line/src/: main.cpp
graphics/03_midpoint_circle/src/: main.cpp
graphics/04_midpoint_ellipse/src/: main.cpp
graphics/05_boundary_fill/src/: main.cpp
graphics/06_2d_transform/src/: main.cpp
graphics/07_2d_translation/src/: main.cpp
graphics/08_2d_rotation/src/: main.cpp
graphics/09_2d_scaling/src/: main.cpp
graphics/10_2d_shearing/src/: main.cpp
graphics/11_2d_reflection/src/: main.cpp
graphics/12_window_view_port_mapping/src/: main.cpp
graphics/13_cohen_sutherland_line_clipping/src/: main.cpp
graphics/14_sutherland_hodgeman_polygon_clipping/src/: main.cpp
graphics/src/01_dda_line_drawing/: main.cpp
graphics/src/02_bresenham_line/: main.cpp
graphics/src/03_midpoint_circle/: main.cpp
graphics/src/04_midpoint_ellipse/: main.cpp
graphics/src/05_boundary_fill/: main.cpp
graphics/src/07_2d_translation/: main.cpp
graphics/src/14_sutherland_hodgeman_polygon_clipping/: main.cpp
networking/http/yt-playlist-time-counter/: CMakeLists.txt  README.md
networking/http/yt-playlist-time-counter/cpp/: main.cpp
networking/load_balance/cpp/: CMakeLists.txt
networking/load_balance/cpp/src/: server.cpp
networking/packet_sniffing/: CMakeLists.txt  main.cpp
networking/web_programming/kdl_as_html/cuteninja/: .gitignore  LICENSE  README.md  pyproject.toml
networking/web_programming/kdl_as_html/kdl-rs-py/: Cargo.toml  README.md  pyproject.toml
random_stuff/ant/: Cargo.toml  README.md
random_stuff/ant/src/: config.rs  hook.rs  main.rs  management.rs  proc.rs  system.rs
random_stuff/ant/src/generation/: mod.rs
(+1342 files in other folders)
