[workspace.package]
authors = ["Soc Virnyl Estela"]
version = "10.1.0"
edition = "2024"
license = "MPL-2.0"
repository = "https://codeberg.org/Rusty-Geckos/roast"
homepage = "https://codeberg.org/Rusty-Geckos/roast"
readme = true

[workspace]
members = ["libroast", "roast-cli"]
default-members = ["libroast", "roast-cli"]
resolver = "2"

[workspace.dependencies]
clap = "^4"

[workspace.lints.rust]
warnings = "deny"
unused_extern_crates = "warn"

[workspace.lints.clippy]
# Enable some groups of clippy lints.
perf = "deny"
suspicious = "deny"
# Specific lints to enforce.
todo = "warn"
unimplemented = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
await_holding_lock = "deny"
needless_pass_by_value = "deny"
trivially_copy_pass_by_ref = "deny"
disallowed_types = "deny"
manual_let_else = "deny"
unreachable = "allow"
unit_arg = "allow"
lint_groups_priority = "allow"

[profile.release]
lto = true        # Enable Link Time Optimization.
debug = true      # Include debug symbols. If you are going to complain for big binary sizes, there is a release-stripped option :P
codegen-units = 8 # Default. Little gains if set to 1 so why bother?
panic = 'abort'   # Abort on panic.
strip = false     # Strip symbols from binary.

[profile.release-stripped]
inherits = "release"
strip = true
