[project]
name = "kdl-rs-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "kdl_rs"
bindings = "pyo3"
features = ["pyo3/extension-module", "pyo3/abi3-py310"]
