[package]
name = "fetchroots"
version = "0.0.0"
edition = "2024"

[lints.clippy]
pedantic = "warn"

[workspace]
members = ["."]

[dependencies]
anyhow = { version = "1.0.80", features = ["backtrace"] }
aws-config = "1.1.6"
aws-sdk-s3 = "1.16.0"
bytes = "1.5.0"
bytes-utils = "0.1.4"
bzip2 = "0.4.4"
chrono = "0.4.34"
data-encoding = "2.8.0"
futures = "0.3.30"
indicatif = "0.17.8"
nix-compat = { version = "0.1.0", path = "../../snix/nix-compat" }
polars = { version = "0.36.2", features = ["parquet"] }
rayon = "1.8.1"
tokio = { version = "1.36.0", features = ["full"] }
xz2 = "0.1.7"
