[package]
name = "snix-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "snix"
path = "src/main.rs"

[dependencies]
snix-build = { path = "../build" }
snix-store = { path = "../store", default-features = false, features = [] }
snix-eval = { path = "../eval" }
snix-glue = { path = "../glue" }
snix-tracing = { path = "../tracing" }
bytes.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
dirs.workspace = true
rustyline.workspace = true
rnix.workspace = true
rowan.workspace = true
smol_str.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-indicatif.workspace = true
rustc-hash.workspace = true
mimalloc.workspace = true
wu-manber.workspace = true
url.workspace = true

[dev-dependencies]
expect-test.workspace = true

[features]
default = []
tracy = ["snix-tracing/tracy"]
xp-store-composition-cli = ["snix-store/xp-composition-cli"]
