[package]
name = "nar-bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true, features = ["http2"] }
axum-extra.workspace = true
axum-range.workspace = true
tower.workspace = true
tower-http = { workspace = true, features = ["compression-zstd", "trace"] }
bytes.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
data-encoding.workspace = true
futures.workspace = true
itertools.workspace = true
prost.workspace = true
nix-compat = { path = "../nix-compat", features = ["async"] }
opentelemetry.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-listener = { workspace = true, features = [
  "axum07",
  "clap",
  "multi-listener",
  "sd_listen",
] }
tokio-util = { workspace = true, features = ["io", "io-util", "compat"] }
tonic = { workspace = true, features = ["tls", "tls-roots"] }
tower-otel-http-metrics = { workspace = true, features = [
  "axum",
], optional = true }
snix-castore = { path = "../castore" }
snix-store = { path = "../store" }
snix-tracing = { path = "../tracing", features = ["tonic", "axum"] }
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-test.workspace = true
url.workspace = true
serde = { workspace = true, features = ["derive"] }
lru.workspace = true
parking_lot.workspace = true
mimalloc.workspace = true

[build-dependencies]
prost-build.workspace = true
tonic-build.workspace = true

[features]
default = ["otlp"]
otlp = ["snix-tracing/otlp", "tower-otel-http-metrics"]
xp-store-composition-cli = ["snix-store/xp-composition-cli"]

[dev-dependencies]
axum-test = "16.4.0"
sha2.workspace = true
