[package]
name = "snix-eval-builtin-macros"
version = "0.0.1"
authors = ["Griffin Smith <root@gws.fyi>"]
edition = "2024"

[dependencies]
syn = { version = "1.0.109", features = [
  "full",
  "parsing",
  "printing",
  "visit",
  "visit-mut",
  "extra-traits",
] }
quote.workspace = true
proc-macro2.workspace = true

[lib]
proc-macro = true

[dev-dependencies]
snix-eval = { path = "../" }
